--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/swagger": "^7.1.16",
+    "@nestjs/swagger": "^7.1.17",
     "@prisma/client": "^5.6.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -32,7 +32,8 @@
     "date-fns": "^2.30.0",
     "httpie": "^1.1.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
